# skroot-module-proc-monitor

./: .gitignore  README.md  SECURITY_AUDIT_REPORT.md  build.sh  module_proc_monitor.cpp  proc_scanner.cpp  proc_scanner.h
.github/workflows/: build.yml
_kit_stub/include/: kernel_module_kit_umbrella.h
jni/: Android.mk  build_macros.mk
overlay/: CMakeLists.txt
overlay/include/ImGui/: VulkanGraphics.h
overlay/include/native_surface/: ANativeWindowCreator.h  ANativeWindowCreator.h.bak
overlay/src/: VulkanGraphics.cpp  overlay_main.cpp
webroot/: index.html  index.html.bak  labels.conf  main.js  overlay-styles.css  style.css
